--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   },
   "devDependencies": {
